{
  "version": 4,
  "terraform_version": "0.12.1",
  "serial": 53,
  "lineage": "3f681b22-748a-84cf-399e-a101796a747c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e8282ce3e2e04c33",
            "owner_id": "496093260591",
            "tags": {
              "Name": "fedemzcor-vpc"
            },
            "vpc_id": "vpc-0494c69cf9ead8284"
          },
          "depends_on": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05ea05d888a1740ba",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "496093260591",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-061994ddea619ce82",
              "subnet-061a68d3af5aa4549",
              "subnet-0a711d9cf1078572f",
              "subnet-0a8a0f0df5fe2c743",
              "subnet-0e70dcc70362c9176",
              "subnet-0fcfed7f2390b1d0a"
            ],
            "tags": {
              "Name": "fedemzcor-subnet-network-acl"
            },
            "vpc_id": "vpc-0494c69cf9ead8284"
          },
          "depends_on": [
            "aws_subnet.public",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e8282ce3e2e04c33",
            "id": "r-rtb-048bc5245fedf907e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-048bc5245fedf907e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-048bc5245fedf907e",
            "owner_id": "496093260591",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e8282ce3e2e04c33",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fedemzcor-public-route-table"
            },
            "vpc_id": "vpc-0494c69cf9ead8284"
          },
          "depends_on": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a047076fc948f3d3",
            "route_table_id": "rtb-048bc5245fedf907e",
            "subnet_id": "subnet-061a68d3af5aa4549"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046c72c46a4205554",
            "route_table_id": "rtb-048bc5245fedf907e",
            "subnet_id": "subnet-061994ddea619ce82"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a939581871df502",
            "route_table_id": "rtb-048bc5245fedf907e",
            "subnet_id": "subnet-0a711d9cf1078572f"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fa8119bc38e38e6",
            "route_table_id": "rtb-048bc5245fedf907e",
            "subnet_id": "subnet-0fcfed7f2390b1d0a"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05630838654d9f0d1",
            "route_table_id": "rtb-048bc5245fedf907e",
            "subnet_id": "subnet-0e70dcc70362c9176"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd08662c46693c91",
            "route_table_id": "rtb-048bc5245fedf907e",
            "subnet_id": "subnet-0a8a0f0df5fe2c743"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496093260591:subnet/subnet-061a68d3af5aa4549",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.96.0/20",
            "id": "subnet-061a68d3af5aa4549",
            "map_public_ip_on_launch": false,
            "owner_id": "496093260591",
            "tags": {
              "Name": "fedemzcor-public-subnet"
            },
            "vpc_id": "vpc-0494c69cf9ead8284"
          },
          "depends_on": [
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496093260591:subnet/subnet-061994ddea619ce82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.112.0/20",
            "id": "subnet-061994ddea619ce82",
            "map_public_ip_on_launch": false,
            "owner_id": "496093260591",
            "tags": {
              "Name": "fedemzcor-public-subnet"
            },
            "vpc_id": "vpc-0494c69cf9ead8284"
          },
          "depends_on": [
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496093260591:subnet/subnet-0a711d9cf1078572f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.128.0/20",
            "id": "subnet-0a711d9cf1078572f",
            "map_public_ip_on_launch": false,
            "owner_id": "496093260591",
            "tags": {
              "Name": "fedemzcor-public-subnet"
            },
            "vpc_id": "vpc-0494c69cf9ead8284"
          },
          "depends_on": [
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496093260591:subnet/subnet-0fcfed7f2390b1d0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.144.0/20",
            "id": "subnet-0fcfed7f2390b1d0a",
            "map_public_ip_on_launch": false,
            "owner_id": "496093260591",
            "tags": {
              "Name": "fedemzcor-public-subnet"
            },
            "vpc_id": "vpc-0494c69cf9ead8284"
          },
          "depends_on": [
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496093260591:subnet/subnet-0e70dcc70362c9176",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.160.0/20",
            "id": "subnet-0e70dcc70362c9176",
            "map_public_ip_on_launch": false,
            "owner_id": "496093260591",
            "tags": {
              "Name": "fedemzcor-public-subnet"
            },
            "vpc_id": "vpc-0494c69cf9ead8284"
          },
          "depends_on": [
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496093260591:subnet/subnet-0a8a0f0df5fe2c743",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.176.0/20",
            "id": "subnet-0a8a0f0df5fe2c743",
            "map_public_ip_on_launch": false,
            "owner_id": "496093260591",
            "tags": {
              "Name": "fedemzcor-public-subnet"
            },
            "vpc_id": "vpc-0494c69cf9ead8284"
          },
          "depends_on": [
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496093260591:vpc/vpc-0494c69cf9ead8284",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07d3cd91ee36a099b",
            "default_route_table_id": "rtb-0a296bc5a3b3b3e68",
            "default_security_group_id": "sg-012f81842bb46ff36",
            "dhcp_options_id": "dopt-9d13f3e7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0494c69cf9ead8284",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a296bc5a3b3b3e68",
            "owner_id": "496093260591",
            "tags": {
              "Name": "fedemzcor-vpc"
            }
          }
        }
      ]
    }
  ]
}